start updating css

--- a/website/src/components/card/styles.module.css
+++ b/website/src/components/card/styles.module.css
@@ -51,7 +51,7 @@
 .pill {
   border-radius: 1.5rem;
   background: #E5E7EB;
-  color:#262A38;
+  color:#030711;
   padding: 0rem 0.75rem;
   font-size: 16px;
 }
