--- a/website/src/css/custom.css
+++ b/website/src/css/custom.css
@@ -468,6 +468,12 @@ a.code-link:hover {
   gap: 8px;
 }
 
+@media(max-width: 1258px) {
+  .navbar__items {
+    gap: 4px;
+  }
+}
+
 .navbar__items .navbar__link.nav-create-account {
   color: var(--color-white);
   height: 30px;
@@ -1364,7 +1370,7 @@ html[data-theme="dark"] .main-wrapper nav a:active {
 
 @media screen and (max-width: 1199px) {
   button.DocSearch-Button {
-    background: var(--ifm-color-gray-100);
+    background: none;
   }
 
   [data-theme="dark"] button.DocSearch-Button {
