--- a/website/src/css/custom.css
+++ b/website/src/css/custom.css
@@ -298,6 +298,10 @@ html[data-theme="dark"] .dropdown__menu {
   display: none;
 }
 
+.dropdown__link:hover, .dropdown__link--active {
+  color: var(--darkmode-link-color) !important;
+}
+
 .container.home:nth-child(odd) {
   background: var(--color-off-white);
 }
@@ -1359,6 +1363,12 @@ html[data-theme="dark"] .main-wrapper nav a:active {
 [data-theme="dark"] button.DocSearch-Button {
   background-color: #FFF !important;
   color: #6A7282 !important;
+}
+
+@media(max-width: 996px) {
+  [data-theme="dark"] button.DocSearch-Button {
+    background-color: transparent !important;
+  }
 }
 
 @media screen and (max-width: 750px) {
