--- a/website/src/components/card/styles.module.css
+++ b/website/src/components/card/styles.module.css
@@ -3,9 +3,8 @@
 }
 
 .card {
-  border: 1px solid #EFF2F3;
-  border-radius: var(--border-radius);
-  box-shadow: 0px 11px 24px rgba(138, 138, 138, .1);
+  border: 1px solid var(--border-neutral-tertiary);
+  border-radius: 16px;
   padding: 2.5rem 2.5rem 1.5rem 2.5rem;
 }
 
@@ -14,7 +13,7 @@
 }
 
 .cardWrapper h3 {
-  font-size: 1.25rem;
+  font-size: var(--text-2xl);
   line-height: 1.875rem;
 }
 
@@ -27,6 +26,7 @@
 
 .cardBody {
   margin-bottom: 20px;
+  color: var(--text-neutral-secondary);
 }
 
 .cardBody a, .cardBody a:hover {
@@ -34,7 +34,7 @@
 }
 
 .icon {
-  margin-bottom: 0.5rem;
+  margin-bottom: 1.5rem;
   max-width: 25px;
   font-size: 25px;
 }
