--- a/website/src/css/typography.css
+++ b/website/src/css/typography.css
@@ -59,6 +59,7 @@
   font-size: var(--text-3xl);
   font-weight: 600;
   line-height: 1.2;
+  margin-bottom: 1.5rem;
 }
 
 @media (min-width: 1280px) {
@@ -129,4 +130,6 @@
   font-family: var(--font-mono);
   font-size: var(--text-base);
   font-weight: 500;
+  margin-bottom: .5rem;
+  display: inline-block;
 }
