--- a/website/src/components/card/styles.module.css
+++ b/website/src/components/card/styles.module.css
@@ -7,6 +7,8 @@
   border-radius: 16px;
   padding: 2.5rem 2.5rem 1.5rem 2.5rem;
   background-color: var(--bg-surface-default);
+  backdrop-filter: blur(10px);
+  -webkit-backdrop-filter: blur(10px);
 }
 
 .cardWrapper, .cardWrapper article {
