--- a/website/src/css/custom.css
+++ b/website/src/css/custom.css
@@ -93,6 +93,7 @@
 
 /* dark theme styles!!! */
 html[data-theme="dark"] {
+  --ifm-background-color: #030711;
   --ifm-navbar-background-color: var(--color-neutral-primary);
   --ifm-menu-color-background-active: var(--color-neutral-primary);
   --ifm-menu-color: var(--color-white);
