--- a/website/src/components/blogPostCard/styles.module.css
+++ b/website/src/components/blogPostCard/styles.module.css
@@ -1,21 +1,23 @@
 :root {
-  --border-radius: 10px;
+  --border-radius: 16px;
 }
 
 .card {
-  border: 1px solid #EFF2F3;
+  border: 1px solid var(--border-neutral-tertiary);
   border-radius: var(--border-radius);
-  box-shadow: 0px 11px 24px rgba(138, 138, 138, .1);
   padding: 2.5rem 2.5rem 1.5rem 2.5rem;
+  background-color: var(--bg-surface-default);
+  backdrop-filter: blur(10px) !important;
 }
 
 /* if blog post has thumbnail image */
 
 .imageCard {
-  border: 1px solid #EFF2F3;
+  border: 1px solid var(--border-neutral-tertiary);
   border-radius: var(--border-radius);
-  box-shadow: 0px 11px 24px rgba(138, 138, 138, .1);
   padding: 0;
+  background-color: var(--bg-surface-default);
+  backdrop-filter: blur(10px) !important;
 }
 
 .contentContainer.imageContentContainer {
@@ -74,5 +76,16 @@ a.ctaLink:after {
 
 .readingTime {
   margin-bottom: 1.5rem;
+}
+
+html[data-theme="dark"] {
+  .card, .imageCard {
+    background-color: var(--bg-surface-inverse);
+    border-color: var(--border-inverse-tertiary);
+  }
+
+  .contentContainer {
+    color: var(--text-inverse-secondary);
+  }
 }
 
