--- a/website/src/css/custom.css
+++ b/website/src/css/custom.css
@@ -1212,75 +1212,81 @@ html[data-theme="dark"] .main-wrapper nav a:active {
 
 /* footer styles */
 .footer {
-  font-weight: var(--ifm-font-weight-narrow);
-  font-size: 0.875rem;
-  padding-top: var(--ifm-footer-padding-vertical);
-  padding-bottom: var(--ifm-footer-padding-vertical);
+  background-color: var(--color-terminal-black-950);
 }
 
-.footer button {
-  font-size: 0.875rem !important;
-}
-
-.footer a {
-  color: var(--ifm-footer-color);
-  text-decoration: none;
-}
-
-.footer a:hover {
-  text-decoration: underline;
-  color: var(--ifm-footer-color);
-}
-
-.footer__links {
-  margin-bottom: 0;
-}
-
-.footer__link-item {
-  color: var(--ifm-footer-color);
-  display: flex;
-  justify-content: space-between;
-}
-
-.footer__items {
-  list-style: none;
-  margin-bottom: 1em;
-  padding-left: 0;
-  gap: 1.5em;
-  display: flex;
-}
-
-/* social media icons in footer */
-.footer__items--right {
-  display: flex;
-  gap: 1.5em;
-  align-items: center;
-}
-
-/* fontawesome icons in footer */
-.footer .fa-brands {
-  color: var(--color-footer-accent);
-  fill: var(--color-footer-accent);
-  width: 25px;
-  font-size: 1.6rem;
-  transition: all 0.3s ease-in-out;
-}
-
-.footer .fa-brands:hover {
-  filter: opacity(0.75);
-}
-
-/* copyright */
-.footer__bottom {
+.footer-grid {
+  display: grid;
+  grid-template-columns: repeat(4, 1fr);
+  gap: 2rem;
   text-align: left;
-  color: white;
-  font-size: 0.875rem;
 }
 
-.footer__copyright {
-  margin-top: 0.5em;
+.footer-grid-item {
+  display: flex;
+  flex-direction: column;
+  gap: 4px;
+
 }
 
+.footer-grid-item h5 {
+  color: var(--text-inverse-primary);
+  font-size: var(--text-lg);
+}
+
+.footer-grid-item a {
+  color: var(--text-inverse-tertiary);
+  font-size: var(--text-sm);
+}
+
+.footer-grid-item .social-icons {
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  align-items: center;
+  gap: 24px;
+  color: var(--text-inverse-primary);
+  
+}
+.footer-grid-item .social-icons .fa-brands {
+  display: block;
+  width: 100%;
+  color: var(--text-inverse-primary);
+  fill: var(--text-inverse-primary);
+  max-width: 25px;
+}
+
+.footer-sub-items {
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  align-items: center;
+  gap: 24px;
+  justify-content: space-between;
+  margin-top: 24px;
+  padding-top: 24px;
+  border-top: 1px solid var(--color-terminal-black-800);
+}
+
+.footer-copyright {
+  color: var(--text-inverse-primary);
+  font-size: var(--text-sm);
+}
+
+.footer-sub-items-links {
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  align-items: center;
+  gap: 32px;
+  color: var(--text-inverse-tertiary);
+  font-size: var(--text-sm);
+}
+
+.footer-sub-items-links a {
+  color: var(--text-inverse-tertiary);
+  font-size: var(--text-sm);
+}
 @media (min-width: 997px) and (max-width: 1045px) {
   .navbar__link.nav-versioning {
     transition: all 0.3s ease-in-out;
@@ -1897,13 +1903,12 @@ footer #ot-sdk-btn,
 footer #ot-sdk-btn.optanon-show-settings {
   background: none;
   border: none;
-  color: var(--ifm-footer-color);
+  color: var(--text-inverse-tertiary);
   text-decoration: none;
-  font-weight: var(--ifm-font-weight-bold);
-  font-family: var(--ifm-font-family-base);
   padding: 0;
   line-height: inherit;
-  font-size: 1.125rem;
+  font-family: var(--font-sans);
+  font-size: var(--text-sm);
   font-weight: 400;
   cursor: pointer;
 }
@@ -1912,7 +1917,7 @@ footer #ot-sdk-btn:hover,
 footer #ot-sdk-btn.optanon-show-settings:hover {
   background: none;
   border: none;
-  color: var(--ifm-footer-color);
+  color: var(--text-inverse-primary);
   text-decoration: underline;
 }
 
