--- a/website/src/css/custom.css
+++ b/website/src/css/custom.css
@@ -1213,6 +1213,16 @@ html[data-theme="dark"] .main-wrapper nav a:active {
 /* footer styles */
 .footer {
   background-color: var(--color-terminal-black-950);
+  padding-top: 3rem;
+}
+
+.footer__links {
+  margin-bottom: 0;
+}
+
+.footer-logo {
+  display: flex;
+  margin-bottom: 3rem;
 }
 
 .footer-grid {
@@ -1220,12 +1230,25 @@ html[data-theme="dark"] .main-wrapper nav a:active {
   grid-template-columns: repeat(4, 1fr);
   gap: 2rem;
   text-align: left;
+  margin-bottom: 3rem;
+}
+
+@media (max-width: 996px) {
+  .footer-grid {
+    grid-template-columns: repeat(2, 1fr);
+  }
+}
+
+@media (max-width: 768px) {
+  .footer-grid {
+    grid-template-columns: repeat(1, 1fr);
+  }
 }
 
 .footer-grid-item {
   display: flex;
   flex-direction: column;
-  gap: 4px;
+  gap: 6px;
 
 }
 
@@ -1266,6 +1289,11 @@ html[data-theme="dark"] .main-wrapper nav a:active {
   margin-top: 24px;
   padding-top: 24px;
   border-top: 1px solid var(--color-terminal-black-800);
+}
+
+.footer__link-item {
+  width: 100%;
+  line-height: inherit;
 }
 
 .footer-copyright {
@@ -1357,10 +1385,6 @@ html[data-theme="dark"] .main-wrapper nav a:active {
   .navbar-sidebar__brand>div:first-of-type {
     order: 1;
     margin-right: 0;
-  }
-
-  .footer__link-item {
-    flex-direction: column;
   }
 
   .footer__copyright {
