--- a/website/src/css/custom.css
+++ b/website/src/css/custom.css
@@ -2573,7 +2573,7 @@ iframe#q-messenger-frame:not(.qlfd-maximized) {
 }
 
 .bottom-cta {
-  background-image: url('/img/bottom-cta-bg.jpg');
+  background-image: url('https://public.cdn.getdbt.com/images/training/end-of-page-cta-bg.jpg');
   background-size: cover;
   background-repeat: no-repeat;
   background-position: bottom;
