--- a/website/src/css/custom.css
+++ b/website/src/css/custom.css
@@ -1978,31 +1978,34 @@ section.discourse-forum-page {
 
   /* Only apply gradients to containers within baton sections */
   .home section[class*="baton"] > .container::before,
-  .home section[class*="baton"] > .container::after {
+  .home section[class*="baton"] > .container::after,
+  .home header.baton-hero > .container::before,
+  .home header.baton-hero > .container::after {
     content: '';
     position: absolute;
     top: 0;
     bottom: -50px;
+    height: 1000px;
     width: 100px;
     pointer-events: none;
     z-index: 2;
   }
 
-  .home section[class*="baton"] > .container::before {
+  .home section[class*="baton"] > .container::before, .home .baton-hero > .container::before {
     left: -110px;
     background: linear-gradient(to right, #fff 0%, rgba(255, 255, 255,1) 50%, transparent 100%);
   }
 
-  .home section[class*="baton"] > .container::after {
+  .home section[class*="baton"] > .container::after, .home .baton-hero > .container::after {
     right: -110px;
     background: linear-gradient(to left, #fff 0%, rgba(255, 255, 255, 1) 50%, transparent 100%);
   }
 
-  [data-theme='dark'] .home section[class*="baton"] > .container::before {
+  [data-theme='dark'] .home section[class*="baton"] > .container::before, [data-theme='dark'] .home .baton-hero > .container::before {
     background: linear-gradient(to right, var(--ifm-background-color) 0%, var(--ifm-background-color) 50%, transparent 100%);
   }
 
-  [data-theme='dark'] .home section[class*="baton"] > .container::after {
+  [data-theme='dark'] .home section[class*="baton"] > .container::after, [data-theme='dark'] .home .baton-hero > .container::after {
     background: linear-gradient(to left, var(--ifm-background-color) 0%, var(--ifm-background-color) 50%, transparent 100%);
   }
 }
@@ -2523,7 +2526,8 @@ iframe#q-messenger-frame:not(.qlfd-maximized) {
 
 
 .baton-1,
-.baton-2 {
+.baton-2,
+.baton-hero {
   position: relative;
 }
 
@@ -2543,12 +2547,31 @@ iframe#q-messenger-frame:not(.qlfd-maximized) {
   z-index: 0;
 }
 
+.baton-hero::before {
+  content: '';
+  position: absolute;
+  top: 0;
+  left: 50%;
+  transform: translateX(-50%);
+  width: 100%;
+  max-width: 1460px;
+  height: 100%;
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: top;
+  z-index: 0;
+}
+
 .baton-1::before {
   background-image: url('/img/batons/baton-1.png');
 }
 
 .baton-2::before {
   background-image: url('/img/batons/baton-2.png');
+}
+
+.baton-hero::before {
+  background-image: url('/img/batons/baton-hero.png');
 }
 
 @media (min-width: 1460px) {
@@ -2560,9 +2583,15 @@ iframe#q-messenger-frame:not(.qlfd-maximized) {
 
 @media (max-width: 996px) {
   .baton-1::before,
-  .baton-2::before {
+  .baton-2::before,
+  .baton-hero::before {
     background-size: contain;
   }
+}
+
+.baton-hero {
+  text-align: center;
+  padding: 6rem 1rem 20rem;
 }
 
 .static-bg {
