--- a/website/src/components/quickstartGuideCard/styles.module.css
+++ b/website/src/components/quickstartGuideCard/styles.module.css
@@ -198,11 +198,11 @@
 }
 
 .favoriteButton:hover, .cardFavoriteButton:hover {
-  color: var(  --color-green-blue);
+  color: var(--color-transform-orange-600);
 }
 
 .favoriteButton.favorited, .cardFavoriteButton.favorited {
-  color: #ffd700;
+  color: var(--color-transform-orange-600);
 }
 
 .cardFavoriteButton svg {
@@ -231,8 +231,8 @@
   top: 10px;
   left: 50%;
   transform: translateX(-50%);
-  background-color: #047377;
-  color: rgb(236, 236, 236);
+  background-color: var(--color-transform-orange-600);
+  color: var(--text-neutral-primary);
   padding: 10px;
   border-radius: 5px;
   z-index: 9999;
