work on filters

--- a/website/src/components/checkboxGroup/styles.module.css
+++ b/website/src/components/checkboxGroup/styles.module.css
@@ -73,7 +73,7 @@
   margin-bottom: .75rem;
   border: none;
   text-decoration: underline;
-  color: var(--ifm-font-color-base);
+  color: var(--text-neutral-primary);
   font-family: var(--ifm-font-family-base);
 }
 
@@ -91,21 +91,29 @@
 
 .selectAllButton {
   padding: 8px 16px;
-  border: 1px solid #6B7280;
-  border-radius: 4px;
+  border: 1px solid var(--border-neutral-tertiary);
+  border-radius: 12px;
   background: transparent;
   cursor: pointer;
-  color: var(--ifm-font-color-base);
+  color: var(--text-neutral-primary);
   font-family: var(--ifm-font-family-base);
   font-size: 1rem;
 }
 
 .selectAllButton:hover {
-  background: #067377;
-  color: #fff;
+  background: var(--bg-neutral-primary-hover);
+  color: var(--text-neutral-primary);
   transition: all 0.2s ease-in-out;
 }
 
 [data-theme='dark'] .selectAllButton {
-  color: #fff;
+  color: var(--text-inverse-primary);
+  border-color: var(--border-inverse-tertiary);
+}
+
+[data-theme='dark'] .selectAllButton:hover {
+  background: var(--bg-neutral-primary-hover);
+  color: var(--text-neutral-primary);
+  transition: all 0.2s ease-in-out;
+  border-color: var(--border-inverse-tertiary);
 }
