--- a/website/src/components/quickstartTOC/styles.module.css
+++ b/website/src/components/quickstartTOC/styles.module.css
@@ -16,44 +16,49 @@
 .tocList li {
     padding: 1rem;
     display: block;
-    box-shadow: 0px 10px 16px 0px rgba(31, 41, 55, 0.10);
     border-radius: 8px;
     margin-bottom: 1rem;
     display: grid;
     grid-template-columns: 1fr 5fr;
     cursor: pointer;
     color: var(--color-neutral-primary);
+    border: 1px solid var(--border-neutral-tertiary);
+    border-radius: 12px;
+    background: var(--bg-surface-default);
     text-decoration: none;
 }
 
 .tocList li span {
-    border-radius: 50%;
+    border-radius: 8px;
     display: inline-block;
     width: 30px;
     height: 30px;
     text-align: center;
-    line-height: 27px;
-    color: var(--color-green-blue);
-    border: solid 1px var(--color-green-blue);
+    vertical-align: middle;
+    color: var(--text-neutral-primary);
+    border: solid 1px var(--border-neutral-tertiary);
     margin-bottom: auto;
 }
 
 .tocList .active span {
-    background: var( --color-green-blue);
-    color: var(--color-white);
+    background: var(--color-terminal-black-200);
+    color: var(--text-neutral-primary);
 }
 
 html[data-theme="dark"] .tocList li {
-    color: var(--color-white);
+    color: var(--text-inverse-primary);
+    border-color: var(--border-inverse-tertiary);
+    background: var(--bg-surface-inverse);
 }
 
 html[data-theme="dark"] .tocList li span {
-    border-color: var(--color-white);
-    color: var(--color-white);
+    border-color: var(--border-inverse-tertiary);
+    color: var(--text-inverse-primary);
 }
 
 html[data-theme="dark"] .tocList .active span {
-    border-color: var(--color-green-blue);
+    border-color: var(--border-inverse-tertiary);
+    color: var(--text-neutral-primary);
 }
 
 .tocItem {
@@ -111,11 +116,11 @@ html[data-theme="dark"] .stepWrapper .buttonContainer a:hover {
 }
 
 html[data-theme="dark"] .buttonContainer > a > svg {
-    fill: var(--color-green-blue);
+    fill: var(--text-inverse-primary);
 }
 
 html[data-theme="dark"] .buttonContainer > a:hover > svg {
-    fill: var(--color-white);
+    fill: var(--text-inverse-primary);
 }
 
 .buttonContainer .prevButton svg {
