--- a/website/src/css/custom.css
+++ b/website/src/css/custom.css
@@ -2522,6 +2522,7 @@ iframe#q-messenger-frame:not(.qlfd-maximized) {
   font-family: var(--font-sans);
   background: var(--bg-neutral-primary-default);
   border: 1px solid var(--bg-neutral-secondary-default);
+  color: var(--text-neutral-primary) !important;
   cursor: pointer;
   border-radius: 12px;
 }
